working on year format

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 110,
    "id": "6688196d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4162d95d",
    "metadata": {},
@@ -31,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 111,
    "id": "af0357f5",
    "metadata": {},
    "outputs": [],
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "id": "d8d3930e",
    "metadata": {},
    "outputs": [
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "id": "79d542f5",
    "metadata": {},
    "outputs": [
@@ -280,7 +279,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 114,
    "id": "940ce19b",
    "metadata": {},
    "outputs": [
@@ -301,7 +300,7 @@
        "(25723, 24)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 115,
    "id": "fb52b67c",
    "metadata": {
     "scrolled": false
@@ -348,7 +347,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,17 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 116,
    "id": "833a0dc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "0         2\n",
+       "1         3\n",
+       "2         3\n",
+       "3         4\n",
+       "4         4\n",
+       "         ..\n",
+       "25718    24\n",
+       "25719    24\n",
+       "25720    24\n",
+       "25721    24\n",
+       "25722    23\n",
+       "Length: 25723, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,9 +392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "id": "7dc5fb60",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -743,7 +755,7 @@
        "[17020 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,66 +766,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "10ca1da2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc2d943f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dc45031",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "e07fe2bf",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Surfing                                   971\n",
-       "Swimming                                  869\n",
-       "Fishing                                   431\n",
-       "Spearfishing                              333\n",
-       "Bathing                                   162\n",
-       "                                         ... \n",
-       "Playing with a frisbee in the shallows      1\n",
-       "Sinking of the ferryboat Dumaguete          1\n",
-       "Wreck of the Storm King                     1\n",
-       "Feeding mullet to sharks                    1\n",
-       "Wreck of  large double sailing canoe        1\n",
-       "Name: Activity, Length: 1532, dtype: int64"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"Activity\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "a2e54634",
    "metadata": {
     "scrolled": true
    },
@@ -821,165 +775,201 @@
     {
      "data": {
       "text/plain": [
-       "USA                       2229\n",
-       "AUSTRALIA                 1338\n",
-       "SOUTH AFRICA               579\n",
-       "PAPUA NEW GUINEA           134\n",
-       "NEW ZEALAND                128\n",
-       "                          ... \n",
-       "MALDIVE ISLANDS              1\n",
-       "NICARAGUA                    1\n",
-       "NORTH SEA                    1\n",
-       "RED SEA / INDIAN OCEAN       1\n",
-       "CEYLON (SRI LANKA)           1\n",
-       "Name: Country, Length: 212, dtype: int64"
+       "19423"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df['Year'].isna().sum()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "b8a14a9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2924    1983.0\n",
+       "Name: Year, dtype: float64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "0d17daec",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Year'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\miniconda3\\envs\\ironhack\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3803\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3802\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3803\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\ironhack\\lib\\site-packages\\pandas\\_libs\\index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\ironhack\\lib\\site-packages\\pandas\\_libs\\index.pyx:146\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\index_class_helper.pxi:49\u001b[0m, in \u001b[0;36mpandas._libs.index.Int64Engine._check_type\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Year'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[90], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mYear\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39misna()\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\ironhack\\lib\\site-packages\\pandas\\core\\series.py:981\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    978\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[key]\n\u001b[0;32m    980\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m--> 981\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    983\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_hashable(key):\n\u001b[0;32m    984\u001b[0m     \u001b[38;5;66;03m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[0;32m    985\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    986\u001b[0m         \u001b[38;5;66;03m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\ironhack\\lib\\site-packages\\pandas\\core\\series.py:1089\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[1;34m(self, label, takeable)\u001b[0m\n\u001b[0;32m   1086\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[label]\n\u001b[0;32m   1088\u001b[0m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[1;32m-> 1089\u001b[0m loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1090\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39m_get_values_for_loc(\u001b[38;5;28mself\u001b[39m, loc, label)\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\ironhack\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3803\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3808\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3809\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3810\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Year'"
+     ]
+    }
+   ],
+   "source": [
+    "df['Year'].isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7186c02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Year'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "212cf23d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9b7bb32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Year'].astype(\"Int64\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78c7d6a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['Year'].str.isnumeric() & (df['Year'].str.len() == 4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc2d943f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Year\"].unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc45031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Type\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e07fe2bf",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df[\"Activity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2e54634",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "df[\"Country\"].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "b0080ea7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FATAL                                                                                     802\n",
-       "Survived                                                                                   97\n",
-       "Foot bitten                                                                                87\n",
-       "No injury                                                                                  82\n",
-       "Leg bitten                                                                                 72\n",
-       "                                                                                         ... \n",
-       "Cut foot, but injury caused by fishing line, not the shark                                  1\n",
-       "Left foot bitten after he accidentally stepped on the shark         PROVOKED INCIDENT       1\n",
-       "2 puncture wounds in left leg                                                               1\n",
-       "PROVOKED INCIDENT    Knee bitten by shark trapped in net                                    1\n",
-       "FATAL. \"Shark bit him in half, carrying away the lower extremities\"                         1\n",
-       "Name: Injury, Length: 3737, dtype: int64"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"Injury\"].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "13b5bbfd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "N          4293\n",
-       "Y          1388\n",
-       "UNKNOWN      71\n",
-       " N            7\n",
-       "M             1\n",
-       "2017          1\n",
-       "N             1\n",
-       "y             1\n",
-       "Name: Fatal (Y/N), dtype: int64"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"Fatal (Y/N)\"].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "32c10834",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "213\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(df[\"Country\"].unique()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "5266c2d3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unprovoked      4595\n",
-       "Provoked         574\n",
-       "Invalid          547\n",
-       "Sea Disaster     239\n",
-       "Boating          203\n",
-       "Boat             137\n",
-       "Questionable       2\n",
-       "Boatomg            1\n",
-       "Name: Type, dtype: int64"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"Type\"].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "46c294ca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "White shark                                                                                                                      163\n",
-       "Shark involvement prior to death was not confirmed                                                                               105\n",
-       "Invalid                                                                                                                          102\n",
-       "Shark involvement not confirmed                                                                                                   88\n",
-       "Tiger shark                                                                                                                       73\n",
-       "                                                                                                                                ... \n",
-       "1.2 m to 1.5 m [4.5' to 5'] shark                                                                                                  1\n",
-       "Bull shark, 2.3 m [7.5']                                                                                                           1\n",
-       "0.9 m  [3'] shark                                                                                                                  1\n",
-       "Mako shark, 14'                                                                                                                    1\n",
-       "Said to involve a grey nurse shark that leapt out of the water and  seized the boy but species identification is questionable      1\n",
-       "Name: Species , Length: 1549, dtype: int64"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"Species \"].value_counts() \n",
     "\n",
@@ -988,7 +978,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "91ec378f",
    "metadata": {},
@@ -1017,10 +1006,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb20f2df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "075b8820",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df[\"Year \"].isna(),sum()\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -1067,7 +1069,7 @@
   "kernelspec": {
    "display_name": "ironhack",
    "language": "python",
-   "name": "python3"
+   "name": "pandas"
   },
   "language_info": {
    "codemirror_mode": {
