--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -1015,16 +1015,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fill NaN values from activity column with 'Unknown'\n",
-    "#df['Activity'].fillna('Unknown', inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
@@ -1039,6 +1029,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove extra spaces\n",
     "df['Fatal-(y/n)'] = df['Fatal-(y/n)'].str.strip(\" \")"
    ]
   },
@@ -1062,7 +1053,7 @@
     }
    ],
    "source": [
-    "# if column not Y or N, assign as UNKNOWN\n",
+    "# Fix inconsistencies in Fatal column: if column not Y or N, assign as UNKNOWN\n",
     "df['Fatal-(y/n)'] = np.where((df[\"Fatal-(y/n)\"] == \"2017\") | (df[\"Fatal-(y/n)\"] == \"M\"), \"UNKNOWN\", df[\"Fatal-(y/n)\"])\n",
     "df[\"Fatal-(y/n)\"].value_counts()"
    ]
@@ -1073,7 +1064,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove words ending with dash\n",
+    "# Remove words ending with dash and simplied naming of Fatal column\n",
     "df.rename({'Species-': \"Species\", \"Sex-\": \"Sex\", 'Fatal-(y/n)': 'Fatal'}, axis=1, inplace=True)"
    ]
   },
@@ -1083,41 +1074,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#consistent capitalization\n",
+    "# Apply consistent capitalization to all string columns\n",
     "df['Activity'] = df['Activity'].str.capitalize()\n",
     "df['Type'] = df['Type'].str.capitalize()\n",
     "df['Country'] = df['Country'].str.capitalize()\n",
     "df['Species'] = df['Species'].str.capitalize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df2 = df['activity'].value_counts().apply(lambda x: \"Other\" if x < 10 else x)\n",
-    "#df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df['activity'].apply(lambda x: \"Other\" if x < 10 else x)\n",
-    "#d = df.activity.value_counts().to_dict()\n",
-    "#df['activity'] = df['activity'].map(lambda x : x  if d[x] > 10 else 'Other')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.activity.value_counts()"
    ]
   },
   {
@@ -1146,18 +1107,6 @@
    ],
    "source": [
     "df.Type.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fill NaN values from columns\n",
-    "#df['species'].fillna('Unknown', inplace=True)\n",
-    "#df['country'].fillna('Unknown', inplace=True)\n",
-    "#df['type'].fillna('Unknown', inplace=True)\n"
    ]
   },
   {
@@ -1296,73 +1245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['2018', '2017', '2016', '2015', '2014', '2013', '2012', '2011', '',\n",
-       "       '2009', '2008', '2007', '2006', '2005', '2004', '2003', '2002',\n",
-       "       '2001', '1999', '1998', '1997', '1996', '1995', '1984', '1994',\n",
-       "       '1993', '1992', '1991', '1989', '1969', '1988', '1987', '1986',\n",
-       "       '1985', '1983', '1982', '1981', '1979', '1978', '1977', '1976',\n",
-       "       '1975', '1974', '1973', '1972', '1971', '1968', '1967', '1966',\n",
-       "       '1965', '1964', '1963', '1962', '1961', '1959', '1958', '1957',\n",
-       "       '1956', '1955', '1954', '1953', '1952', '1951', '1949', '1948',\n",
-       "       '1848', '1947', '1946', '1945', '1944', '1943', '1942', '1941',\n",
-       "       '1939', '1938', '1937', '1936', '1935', '1934', '1933', '1932',\n",
-       "       '1931', '1929', '1928', '1927', '1926', '1925', '1924', '1923',\n",
-       "       '1922', '1921', '1919', '1918', '1917', '1916', '1915', '1914',\n",
-       "       '1913', '1912', '1911', '1909', '1908', '1907', '1906', '1905',\n",
-       "       '1904', '1903', '1902', '1901', '1899', '1898', '1897', '1896',\n",
-       "       '1895', '1894', '1893', '1892', '1891', '1889', '1888', '1887',\n",
-       "       '1886', '1885', '1884', '1883', '1882', '1881', '1879', '1878',\n",
-       "       '1877', '1876', '1875', '1874', '1873', '1872', '1871', '1869',\n",
-       "       '1868', '1867', '1866', '1865', '1864', '1863', '1862', '1861',\n",
-       "       '1859', '1858', '1857', '1856', '1855', '1853', '1852', '1851',\n",
-       "       '1849', '1847', '1846', '1845', '1844', '1842', '1841', '1839',\n",
-       "       '1837', '1836', '1835', '1834', '1832', '1831', '1829', '1828',\n",
-       "       '1827', '1826', '1825', '1823', '1822', '1819', '1818', '1817',\n",
-       "       '1816', '1815', '1812', '1811', '1808', '1807', '1805', '1804',\n",
-       "       '1803', '1802', '1801', '1797', '1792', '1791', '1788', '1787',\n",
-       "       '1786', '1785', '1784', '1783', '1779', '1776', '1771', '1767',\n",
-       "       '1764', '1758', '1753', '1751', '1749', '1755', '1748', '1742',\n",
-       "       '1738', '1733', '1723', '1721', '1703', '1642', '1638', '1637',\n",
-       "       '1617', '1595', '1555', '1554', '1543'], dtype=object)"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"Year\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df[\"Year\"] = df['Year'].apply(lambda x: \"\" if len(x) != 4 else x)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#df['Year'] = pd.to_numeric(df['Year'], errors='coerce')\n",
-    "df.dropna(subset=['Year'], inplace=True)\n",
-    "#df['Year'] = pd.to_datetime(df['Year'], format='%Y', exact=True, errors='ignore')"
+    "\n",
+    "df.dropna(subset=['Year'], inplace=True)\n"
    ]
   },
   {
@@ -1821,6 +1711,7 @@
     }
    ],
    "source": [
+    "\n",
     "df[\"Year\"].dtypes"
    ]
   },
@@ -1953,24 +1844,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df['Year'] = pd.DatetimeIndex(df['Year']).year"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [],
@@ -1999,49 +1872,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2018., 2017., 2016., 2015., 2014., 2013., 2012., 2011.,   nan,\n",
-       "       2009., 2008., 2007., 2006., 2005., 2004., 2003., 2002., 2001.,\n",
-       "       1999., 1998., 1997., 1996., 1995., 1984., 1994., 1993., 1992.,\n",
-       "       1991., 1989., 1969., 1988., 1987., 1986., 1985., 1983., 1982.,\n",
-       "       1981., 1979., 1978., 1977., 1976., 1975., 1974., 1973., 1972.,\n",
-       "       1971., 1968., 1967., 1966., 1965., 1964., 1963., 1962., 1961.,\n",
-       "       1959., 1958., 1957., 1956., 1955., 1954., 1953., 1952., 1951.,\n",
-       "       1949., 1948., 1848., 1947., 1946., 1945., 1944., 1943., 1942.,\n",
-       "       1941., 1939., 1938., 1937., 1936., 1935., 1934., 1933., 1932.,\n",
-       "       1931., 1929., 1928., 1927., 1926., 1925., 1924., 1923., 1922.,\n",
-       "       1921., 1919., 1918., 1917., 1916., 1915., 1914., 1913., 1912.,\n",
-       "       1911., 1909., 1908., 1907., 1906., 1905., 1904., 1903., 1902.,\n",
-       "       1901., 1899., 1898., 1897., 1896., 1895., 1894., 1893., 1892.,\n",
-       "       1891., 1889., 1888., 1887., 1886., 1885., 1884., 1883., 1882.,\n",
-       "       1881., 1879., 1878., 1877., 1876., 1875., 1874., 1873., 1872.,\n",
-       "       1871., 1869., 1868., 1867., 1866., 1865., 1864., 1863., 1862.,\n",
-       "       1861., 1859., 1858., 1857., 1856., 1855., 1853., 1852., 1851.,\n",
-       "       1849., 1847., 1846., 1845., 1844., 1842., 1841., 1839., 1837.,\n",
-       "       1836., 1835., 1834., 1832., 1831., 1829., 1828., 1827., 1826.,\n",
-       "       1825., 1823., 1822., 1819., 1818., 1817., 1816., 1815., 1812.,\n",
-       "       1811., 1808., 1807., 1805., 1804., 1803., 1802., 1801., 1797.,\n",
-       "       1792., 1791., 1788., 1787., 1786., 1785., 1784., 1783., 1779.,\n",
-       "       1776., 1771., 1767., 1764., 1758., 1753., 1751., 1749., 1755.,\n",
-       "       1748., 1742., 1738., 1733., 1723., 1721., 1703.])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Year'].unique()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -2063,13 +1893,6 @@
    "source": [
     "df = df.drop_duplicates(keep='first')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2209,7 +2032,16 @@
     }
    ],
    "source": [
+    "#Check result of relevant columns\n",
     "df[['Year','Country', 'Type','Fatal']].head(100)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export CSV for extraction and visualization"
    ]
   },
   {
@@ -2238,7 +2070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
