--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -1069,7 +1069,7 @@
   "kernelspec": {
    "display_name": "ironhack",
    "language": "python",
-   "name": "pandas"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1081,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
