--- a/extraction-and-visualization.ipynb
+++ b/extraction-and-visualization.ipynb
@@ -1225,7 +1225,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1259,9 +1258,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pandas"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1273,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
