--- a/extraction-and-visualization.ipynb
+++ b/extraction-and-visualization.ipynb
@@ -1258,9 +1258,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ironhack",
    "language": "python",
-   "name": "python3"
+   "name": "pandas"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1272,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
